image and sentence added

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <h1>hello everyone !! i am priti ugale</h1>
+    <h3>arjit singh is my fav. singer.</h3>
+    <img src="/download.jpg" height="300px">
 </body>
 </html>
