image and sentence added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>hello everyone !! i am priti ugale</h1>
     <h3>arjit singh is my fav. singer.</h3>
     <img src="/download.jpg" height="300px">
+    <a href="https://www.google.com">google</a>
 </body>
 </html>
