--- a/index.html
+++ b/index.html
@@ -8,5 +8,23 @@
     <h3>arjit singh is my fav. singer.</h3>
     <img src="/download.jpg" height="300px">
     <a href="https://www.google.com">google</a>
+    <table>
+        <thead>
+            <tr>
+                <th>NAME</th>
+                <th>ROLL NO.</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>PRITI UGALE</td>
+                <TD>11</TD>
+            </tr>
+            <TR>
+                <TD>SAYALI TAMBE</TD>
+                <TD>45</TD>
+            </TR>
+        </tbody>
+    </table>
 </body>
 </html>
