input fields added

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
             </TR>
         </tbody>
     </table>
+    <form>
+        <input type="text" placeholder="enter your name"><br>
+        <input type="email" placeholder="enter your email">
+    </form>
 </body>
 </html>
